--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mesa (21.2.0-1) unstable; urgency=medium
+
+  * Latest upstream
+
+ -- Ivan J. <parazyd@dyne.org>  Mon, 12 Jul 2021 12:22:12 +0200
+
 mesa (20.3.5-1) unstable; urgency=medium
 
   * New upstream release.
